# VulkanRayTracing

./: .clang-format  01_sphere.cpp  01_sphere.rchit  01_sphere.rgen  01_sphere.rint  01_sphere.rmiss  CMakeLists.txt  README.md  arcball.cpp  arcball.hpp  camera.hpp  shader_binding_table_generator.cpp  shader_binding_table_generator.hpp  vk.hpp  vk_result.hpp
flext/: vk_win32_khr.txt  vk_xcb_khr.txt
flext/templates/vulkan/: flextVk.h.template
